# sdk

./: .clang-format  .gitignore  .gitlint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  west.yml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  enhancement.yml
.github/workflows/: build-docs.yaml  build-samples-zephyr-samples.yml  codecov.yaml  compliance.yaml  reviewer.yaml  test-zephyr-ble-network.yaml  trigger-docs-build.yaml
docs/: Doxyfile  Makefile  conf.py  index.rst  requirements.txt
docs/ble/: api.rst  index.rst  security.rst  timing.rst
docs/introduction/: index.rst
docs/quickstart/: index.rst
docs/quickstart/freertos/: index.rst
docs/quickstart/zephyr/: index.rst
docs/releases/: 1.0.rst  index.rst
docs/satellite/: api.rst  index.rst
docs/security/: index.rst  vulnerabilities.rst  vulnerability-process.rst
docs/static/css/: custom.css  dark.css  hubble-colors.css  light.css
docs/templates/: layout.html
include/: hubble_port.h  hubble_sat.h  hubble_sat_ephemeris.h  hubble_sat_packet.h
include/hubble/: ble.h  hubble.h  hubble_port.h  sat.h  version.h
include/hubble/port/: crypto.h  sat_radio.h  sys.h
include/hubble/sat/: ephemeris.h  packet.h
port/esp-idf/: hubble_esp_idf.c
port/esp-idf/hubblenetwork-sdk/: CMakeLists.txt  Kconfig
port/freertos/: config.h  hubble_freertos.c  hubble_sat_freertos.c  hubblenetwork-sdk.mk  sat_board.h
port/zephyr/: CMakeLists.txt  Kconfig  hubble_ble_zephyr.c  hubble_ble_zephyr_psa.c  hubble_rf_zephyr.h  hubble_sat_zephyr.c  hubble_zephyr.c  sat_board.h
samples/esp-idf/ble-beacon/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
samples/esp-idf/ble-beacon/main/: CMakeLists.txt  main.c
samples/freertos/ti/ble-beacon/: .gitignore  README.md  ble-beacon.syscfg  embed_key_utc.py  makefile
samples/freertos/ti/ble-beacon/src/: app_main.h  hubble_ble_adv.c  hubble_ble_ti.c  main.c
samples/freertos/ti/ble-beacon/src/common/Startup/: osal_icall_ble.c
samples/zephyr/ble-beacon/: CMakeLists.txt  Kconfig  README.md  debug.conf  embed_key_utc.py  prj.conf  sample.yaml  sync_time.py
samples/zephyr/ble-beacon/src/: key.c  main.c  store.c  utc.c
samples/zephyr/ble-network/: CMakeLists.txt  Kconfig  README.md  debug.conf  prj.conf  provisioning-key.py  sample.yaml
samples/zephyr/ble-network/src/: main.c
samples/zephyr/sat-continuous/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/zephyr/sat-continuous/src/: main.c
src/: hubble.c  hubble_ble.c  hubble_crypto.c  hubble_priv.h  hubble_sat.c  hubble_sat_ephemeris.c  hubble_sat_packet.c  hubble_sat_packet_deprecated.c  reed_solomon_encoder.c  reed_solomon_encoder.h
src/crypto/: mbedtls.c  psa.c
src/utils/: bitarray.c  bitarray.h  macros.h
tests/unit-tests/: CMakeLists.txt  README.md  test_bitarray.c
tests/zephyr/ble-network/: CMakeLists.txt  prj.conf  testcase.yaml
tests/zephyr/ble-network/src/: main.c
tests/zephyr/ephemeris/: CMakeLists.txt  prj.conf  testcase.yaml
tests/zephyr/ephemeris/src/: main.c
tests/zephyr/sat-api/: prj.conf  testcase.yaml
tests/zephyr/sat-api/src/: main.c
tests/zephyr/unit/bitarray/: CMakeLists.txt  main.c  testcase.yaml
tests/zephyr/unit/ble-advertise/: CMakeLists.txt  prj.conf  testcase.yaml
tests/zephyr/unit/ble-advertise/src/: main.c  test_vectors.c  test_vectors.h
tools/: ble-adv.py  coccicheck  embed_key_utc.py  requirements-ble-adv.txt  requirements-scan.txt  requirements-validate.txt  scan.py  validate.py
tools/ci/: pylintrc.toml  requirements.txt  summarize_footprint.py
tools/ci/gitlint/: rules.py
tools/coccinelle/: array_size.cocci  boolean.cocci  reserved_names.cocci  same_identifier.cocci
